[tool.poetry]
name = "mamima"
version = "0.1.0"
description = "FFF"
authors = ["Atvr0 <artvro12345@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
